style(spotless): apply spotless to all new AdventOfCode subprojects